Rework Filter component and style to fix overflowing body

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,7 +9,7 @@
 .app {
   transition: background-color 0.2s ease-in;
   background-color: var(--backgroundColor);
-  height: 100vh;
+  min-height: 100vh;
 }
 
 button {
