--- a/src/components/Filter/filter.module.css
+++ b/src/components/Filter/filter.module.css
@@ -1,7 +1,7 @@
 .filter {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 auto;
   width: 600px;
   font-size: 1.2rem;
@@ -11,7 +11,31 @@
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   transition: all 0.2s ease-in;
+}
+
+.container {
+  z-index: 50;
+}
+.filter > div:nth-child(1) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background-color: var(--componentColor);
+}
+
+.filter > div:nth-child(1) > p {
+  position: absolute;
+  left: 15px;
+  top: 13px;
+}
+
+.clearButton {
+  color: var(--secondaryFontColor);
+  position: absolute;
+  right: 15px;
+  top: 13px;
 }
 
 .filter > * {
@@ -44,20 +68,40 @@
 @media screen and (max-width: 650px) {
   .filter {
     width: auto;
+    flex-direction: column;
+    align-items: stretch;
+    padding: 0;
     margin-inline: 20px;
+  }
+  .filter > div:nth-child(1) {
+    width: auto;
+    position: static;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    border-radius: 5px;
+  }
+
+  .filter > div:nth-child(1) > p {
+    position: static;
+    left: 15px;
+  }
+
+  .clearButton {
+    color: var(--secondaryFontColor);
+    position: static;
+    right: 15px;
   }
 
   .container {
+    padding: 10px 20px;
     display: flex;
     justify-content: center;
-    gap: 50px;
-    width: 100%;
-    padding: 10px 20px;
-    position: absolute;
-    bottom: -70px;
-    transition: all 0.2s ease-in;
+    gap: 20px;
+    align-items: center;
     background-color: var(--componentColor);
+    margin-top: 25px;
     border-radius: 5px;
-    right: 0;
   }
 }
